<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:background="@android:color/holo_orange_light">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title_mainActivity"
        android:text="@string/text_Title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_Title"
        android:id="@+id/username_Title"
        android:layout_above="@+id/edit_Password"
        android:layout_alignLeft="@+id/second_Title"
        android:layout_alignStart="@+id/second_Title"
        android:layout_marginBottom="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_Title"
        android:id="@+id/password_Title"
        android:layout_above="@+id/login_Button"
        android:layout_alignLeft="@+id/second_Title"
        android:layout_alignStart="@+id/second_Title"
        android:layout_marginBottom="80dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/second_Title"
        android:id="@+id/second_Title"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/title_mainActivity"
        android:layout_alignRight="@+id/title_mainActivity"
        android:layout_alignEnd="@+id/title_mainActivity" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/edit_Username"
        android:layout_alignBottom="@+id/username_Title"
        android:layout_alignRight="@+id/title_mainActivity"
        android:layout_alignEnd="@+id/title_mainActivity"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:inputType="textPersonName"
        android:enabled="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/edit_Password"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/password_Title"
        android:layout_alignRight="@+id/edit_Username"
        android:layout_alignEnd="@+id/edit_Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:onClick="Log"
        android:id="@+id/login_Button"
        android:layout_marginBottom="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/password_Title"
        android:layout_alignStart="@+id/password_Title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:onClick= "Clear"
        android:id="@+id/clear_Button"
        android:layout_alignTop="@+id/login_Button"
        android:layout_alignRight="@+id/second_Title"
        android:layout_alignEnd="@+id/second_Title" />

</RelativeLayout>
