<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.luisvalcourt.personal_agenda.Agenda_Activity"
    android:id="@+id/March_Agenda"
    android:background="#ffffa62f">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_agenda"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subject_agenda"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/subject_text"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_agenda"
        android:id="@+id/subject"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/subject_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/message_text"
        android:enabled="true"
        android:editable="true"
        android:background="#ffe9ffff"
        android:layout_below="@+id/subject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save It"
        android:onClick="Save"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/subject"
        android:layout_toStartOf="@+id/subject" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:onClick="Clear"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/subject"
        android:layout_toEndOf="@+id/subject" />
</RelativeLayout>
